@@ -5,23 +5,24 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import ua.com.foxminded.university.model.Group;
 import ua.com.foxminded.university.model.Lecture;
+import ua.com.foxminded.university.model.Timeslot;
 
 import java.time.LocalDate;
+import java.time.LocalTime;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static ua.com.foxminded.university.repository.GroupRepositoryTest.TestData.expectedGroup1;
-import static ua.com.foxminded.university.repository.GroupRepositoryTest.TestData.expectedGroup2;
 import static ua.com.foxminded.university.repository.ClassroomRepositoryTest.TestData.expectedClassroom1;
 import static ua.com.foxminded.university.repository.ClassroomRepositoryTest.TestData.expectedClassroom2;
+import static ua.com.foxminded.university.repository.GroupRepositoryTest.TestData.expectedGroup1;
+import static ua.com.foxminded.university.repository.GroupRepositoryTest.TestData.expectedGroup2;
 import static ua.com.foxminded.university.repository.LectureRepositoryTest.TestData.expectedLecture1;
 import static ua.com.foxminded.university.repository.LectureRepositoryTest.TestData.expectedLectures;
 import static ua.com.foxminded.university.repository.SubjectRepositoryTest.TestData.expectedSubject1;
 import static ua.com.foxminded.university.repository.SubjectRepositoryTest.TestData.expectedSubject2;
 import static ua.com.foxminded.university.repository.TeacherRepositoryTest.TestData.expectedTeacher1;
 import static ua.com.foxminded.university.repository.TeacherRepositoryTest.TestData.expectedTeacher2;
-import static ua.com.foxminded.university.repository.TimeslotRepositoryTest.TestData.expectedTimeslot1;
-import static ua.com.foxminded.university.repository.TimeslotRepositoryTest.TestData.expectedTimeslot2;
+import static ua.com.foxminded.university.repository.LectureRepositoryTest.TestData.expectedTimeslot1;
 
 @DataJpaTest
 public class LectureRepositoryTest {
@@ -140,17 +141,19 @@ public class LectureRepositoryTest {
     }
 
     interface TestData {
-    Set<Group> expectedGroups1 = new HashSet<>(Arrays.asList(expectedGroup1, expectedGroup2));
-    Set<Group> expectedGroups2 = new HashSet<>(List.of(expectedGroup1));
+        Timeslot expectedTimeslot1 = new Timeslot(1, LocalTime.of(9, 0), LocalTime.of(9, 45));
+        Timeslot expectedTimeslot2 = new Timeslot(2, LocalTime.of(10, 0), LocalTime.of(10, 45));
+        Set<Group> expectedGroups1 = new HashSet<>(Arrays.asList(expectedGroup1, expectedGroup2));
+        Set<Group> expectedGroups2 = new HashSet<>(List.of(expectedGroup1));
 
-    Lecture expectedLecture1 = Lecture.builder().date(LocalDate.of(2020, 1, 1)).subject(expectedSubject1)
-            .id(1).timeslot(expectedTimeslot1).groups(expectedGroups1)
-            .teacher(expectedTeacher1).classroom(expectedClassroom1).build();
+        Lecture expectedLecture1 = Lecture.builder().date(LocalDate.of(2020, 1, 1)).subject(expectedSubject1)
+                .id(1).timeslot(expectedTimeslot1).groups(expectedGroups1)
+                .teacher(expectedTeacher1).classroom(expectedClassroom1).build();
 
-    Lecture expectedLecture2 = Lecture.builder().date(LocalDate.of(2020, 1, 2)).subject(expectedSubject2)
-            .id(2).timeslot(expectedTimeslot2).groups(expectedGroups2)
-            .teacher(expectedTeacher2).classroom(expectedClassroom2).build();
+        Lecture expectedLecture2 = Lecture.builder().date(LocalDate.of(2020, 1, 2)).subject(expectedSubject2)
+                .id(2).timeslot(expectedTimeslot2).groups(expectedGroups2)
+                .teacher(expectedTeacher2).classroom(expectedClassroom2).build();
 
-    List<Lecture> expectedLectures = new ArrayList<>(Arrays.asList(expectedLecture1, expectedLecture2));
-}
+        List<Lecture> expectedLectures = new ArrayList<>(Arrays.asList(expectedLecture1, expectedLecture2));
+    }
 }
